--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "firebase": "^7.21.1",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
