Take 3 change name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"homepage": "https://kkatoch89.github.io/karan-katoch-project-five",
-	"name": "karan-katoch-project-five",
+	"homepage": "https://kkatoch89.github.io/flow",
+	"name": "flow",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
